# PROYECTO-MASTERMIND-1-DAM

./: .gitignore  README.md  main.py  pyproject.toml
src/: crear_generacion.py  crear_offspring.py  fitness_por_color.py  generar_codigo_aleatorio.py  generar_poblacion_aleatoria.py  grafico.py  introducir_codigo.py  medir_fitness.py  parametros_mastermind.py  selector_padres.py
test/: test.py  test_crear_generaciones.py  test_crear_offspring.py  test_fitness_por_color.py  test_generar_codigo_aleatorio.py  test_generar_poblacion_aleatoria.py  test_medir_fitness.py  test_selector padres.py
