[project]
name = "proyecto-mastermind-1-dam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]


# Paquete del sistema necesario: python3-tk (Tkinter)
# Instalar en Ubuntu/Debian:
# sudo apt install python3-tk